# new_ros2

install/: local_setup.sh  setup.sh
log/: latest_build
src/museum_robot/: package.xml  setup.cfg  setup.py
src/museum_robot/arduino/: museum_robot.ino
src/museum_robot/config/: nav2_params.yaml  slam_toolbox.yaml
src/museum_robot/launch/: bringup.launch.py  navigation.launch.py
src/museum_robot/museum_robot/: arduino_bridge.py  lidar_watchdog.py  scan_filter.py
src/museum_robot/scripts/: lidar_motor_keeper.py  lidar_relay.py  lidar_tcp_relay.py  reset_lidar.py
