<?xml version="1.0"?>
<package format="3">
  <name>museum_robot</name>
  <version>0.0.1</version>
  <description>Museum Guide Robot</description>
  <maintainer email="nexus5uom@gmail.com">pi</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_msgs</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
